--- a/diagnostics/ecmean/config/ecmean_config_destine-v1.yml
+++ b/diagnostics/ecmean/config/ecmean_config_destine-v1.yml
@@ -11,11 +11,11 @@ dirs:
   fig: /pfs/lustrep3/projappl/project_465000454/padavini/ecmean/output/PDF
 
 global:
-  atm_vars: [tas, psl, pr, evspsbl, pme, cll, clm, clh,
+  atm_vars: [tas, psl, pr, evspsbl, pme, clt, cll, clm, clh,
             pr_oce, pme_oce, pr_land, pme_land,
             rsnt, rlnt, net_toa, rsns, rlns, hfss, hfls]
   oce_vars: [tos, sos]
-  ice_vars: []
+  ice_vars: [siconc]
   tab_vars: []
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
   seasons: ['ALL', 'DJF', 'JJA']
@@ -28,7 +28,7 @@ PI:
   oce_vars:
     field: [tos, sos]
   ice_vars:
-    field: []
+    field: [siconc]
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
   seasons: ['ALL', 'DJF', 'JJA']
   resolution: r360x180
