fix avg_tos mask for regrid

--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -265,7 +265,7 @@ grids:
       2d: $grids/ERA5/r025_grid.nc
       2dm: $grids/ERA5/r025_grid_masked.nc
     masked: 
-      vars: ["SSTK", "sst"]
+      vars: ["SSTK", "sst", "avg_tos"]
     space_coord: ["lon", "lat"]
     vert_coord: ["2d", "2dm"]
 
