--- a/diagnostics/global_time_series/cli/single_analysis/config_time_series_oce.yaml
+++ b/diagnostics/global_time_series/cli/single_analysis/config_time_series_oce.yaml
@@ -18,7 +18,7 @@ timeseries_plot_params:
     plot_kw:
       color: "tab:blue"
     plot_era5: True
-    resample: "M"
+    resample: null
     savefig: True
   # sst:
   #   plot_kw:
