--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990-dev-lowres.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990-dev-lowres.yaml
@@ -21,8 +21,8 @@ sources:
       data_start_date: 19900101T0000
       data_end_date: 20191231T2300
       aggregation: D  # Default aggregation / chunk size
-      savefreq: H  # at what frequency are data saved
-      timestep: H  # base timestep for step timestyle
+      savefreq: h  # at what frequency are data saved
+      timestep: h  # base timestep for step timestyle
       timestyle: date  # variable date or variable step
     description: hourly atmospheric 2D data on native grid TCo79.
     driver: gsv
