--- a/config/machines/ci/catalog/IFS/test-fdb.yaml
+++ b/config/machines/ci/catalog/IFS/test-fdb.yaml
@@ -15,8 +15,8 @@ sources:
         step: 0
       data_start_date: "20080101T1200"
       data_end_date: "20080101T1200"
-      aggregation: H
-      timestep: H
+      aggregation: h
+      timestep: h
       timestyle: date
     description: test FDB archive
     driver: gsv
@@ -45,8 +45,8 @@ sources:
         step: 0
       data_start_date: auto
       data_end_date: auto
-      aggregation: H
-      timestep: H
+      aggregation: h
+      timestep: h
       timestyle: date
     description: test FDB archive using new schema and auto dates
     driver: gsv
@@ -70,8 +70,8 @@ sources:
         step: 0
       data_start_date: "20080101T1200"
       data_end_date: "20080101T1200"
-      aggregation: H
-      timestep: H
+      aggregation: h
+      timestep: h
       timestyle: date
     description: test FDB archive
     driver: gsv
@@ -96,8 +96,8 @@ sources:
         step: 0
       data_start_date: "20080101T1200"
       data_end_date: "20080101T1200"
-      aggregation: H
-      timestep: H
+      aggregation: h
+      timestep: h
       timestyle: date
     description: test FDB archive
     driver: gsv
