--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -21,8 +21,8 @@ sources:
       data_start_date: 19900101T0000
       data_end_date: 19971231T2300
       aggregation: D  # Default aggregation / chunk size
-      savefreq: H  # at what frequency are data saved
-      timestep: H  # base timestep for step timestyle
+      savefreq: h  # at what frequency are data saved
+      timestep: h  # base timestep for step timestyle
       timestyle: date  # variable date or variable step
     description: hourly data on native grid TCo1279 (about 10km).
     driver: gsv
