--- a/diagnostics/global_time_series/cli/single_analysis/config_time_series_oce.yaml
+++ b/diagnostics/global_time_series/cli/single_analysis/config_time_series_oce.yaml
@@ -6,7 +6,7 @@ source: "lra-r100-monthly"
 outputdir: "./"
 
 # This is the list of variables that will be plotted as timeseries
-timeseries: ['avg_tos']
+timeseries: ['avg_tos', 'avg_siconc']
 
 timeseries_plot_params:
 # These are options that specify how the data is plotted
