gregory plot with custom 2t and toa

--- a/diagnostics/global_time_series/cli/single_analysis/config_time_series_atm.yaml
+++ b/diagnostics/global_time_series/cli/single_analysis/config_time_series_atm.yaml
@@ -6,21 +6,23 @@ source: "lra-r100-monthly"
 outputdir: "./"
 
 # This is the list of variables that will be plotted as timeseries
-timeseries: ['2t', 'tprate', 'mer', 'msl', 'tcc',
-             'mslhf', #Mean surface latent heat flux
-             'msshf', #Mean surface sensible heat flux
-             'msdwswrf', #Mean surface downward short-wave radiation flux
-             'msdwlwrf', #Mean surface downward long-wave radiation flux
-             'msnswrf', #Mean surface net short-wave radiation flux
-             'msnlwrf', #Mean surface net long-wave radiation flux
-             'mtnlwrf', #Mean top net long-wave radiation flux
-             'mtnswrf' #Mean top net short-wave radiation flux
-             ]
-timeseries_fomulae: ['mtnlwrf+mtnswrf']
+# timeseries: ['2t', 'tprate', 'mer', 'msl', 'tcc',
+#              'mslhf', #Mean surface latent heat flux
+#              'msshf', #Mean surface sensible heat flux
+#              'msdwswrf', #Mean surface downward short-wave radiation flux
+#              'msdwlwrf', #Mean surface downward long-wave radiation flux
+#              'msnswrf', #Mean surface net short-wave radiation flux
+#              'msnlwrf', #Mean surface net long-wave radiation flux
+#              'mtnlwrf', #Mean top net long-wave radiation flux
+#              'mtnswrf' #Mean top net short-wave radiation flux
+#              ]
+# timeseries_fomulae: ['mtnlwrf+mtnswrf']
 
-# gregory:
-#   resample: "M"
-#   savefig: True
+gregory:
+  ts: '2t'
+  toa: ['mtnlwrf', 'mtnswrf']
+  resample: null
+  savefig: True
 
 timeseries_plot_params:
 # These are options that specify how the data is plotted
