--- a/diagnostics/ocean3d/cli/config.yaml
+++ b/diagnostics/ocean3d/cli/config.yaml
@@ -8,15 +8,19 @@ source: lra-r100-monthly
 
 outputdir: ./output
 
-time_selection : True
+time_selection : False
 start_year : 1991
 end_year : 1992
 
 predefined_regions:
   - Indian Ocean
-  # - Pacific Ocean
+  - Pacific Ocean
+  - Atlantic Ocean
+  - Arctic Ocean
+  - Southern Ocean
+  - Labrador Sea
 
-custom_region:
-  - [latS: -30, latN: 30, lonW: 100, lonE: 300]
+# custom_region:
+#   - [latS: -30, latN: 30, lonW: 100, lonE: 300]
   # - [latS: 0, latN: 30, lonW: 100, lonE: 150]
 
