--- a/diagnostics/atmglobalmean/cli/config/atm_mean_bias_config.yml
+++ b/diagnostics/atmglobalmean/cli/config/atm_mean_bias_config.yml
@@ -15,8 +15,13 @@ diagnostic_attributes:
   seasonal_bias: True
   compare_datasets_plev: True
   plot_map_with_stats: True
+  start_date1: "2020-01-01"
+  end_date1: "2024-12-01"
+  start_date2: "1990-01-01"
+  end_date2: "2019-12-31"
 
 loglevel: 'warning'
 
 path:
-  path_to_output: "/scratch/b/b382267/cli_test/atmglobalmean/"
+  path_to_output: "/work/bb1153/b382257/AQUA/diagnostics/atmglobalmean"
+  
