--- a/config/fixes/OSI-SAF.yaml
+++ b/config/fixes/OSI-SAF.yaml
@@ -5,6 +5,9 @@ models:
                 data_model: false  # Do not attempt to fix coordinates
                 vars:
                     # Automatic conversion to destination grib units
-                    var262001:  # siconc
+                    avg_siconc:
                         source: ice_conc
                         grib: true
+                    # var262001:  # siconc
+                    #     source: ice_conc
+                    #     grib: true
