change ci to avg_siconc for osisaf-sh

--- a/diagnostics/seaice/cli/config.yml
+++ b/diagnostics/seaice/cli/config.yml
@@ -17,7 +17,7 @@ models:
     exp: osi-450
     source: sh-monthly
     regrid: null
-    variable: ci
+    variable: avg_siconc
     timespan: null
 
 regions: # If this block is missing all regions will be evaluated
