--- a/diagnostics/seaice/cli/config.yml
+++ b/diagnostics/seaice/cli/config.yml
@@ -7,11 +7,12 @@ models:
     var: avg_siconc
     timespan: null # can be of the format ['2020-01-20', '2024-12-31']
   # These are observational datasets
+# These are observational datasets
   - model: OSI-SAF
     exp: osi-450
     source: nh-monthly
     regrid: null
-    var: siconc
+    variable: avg_siconc
     timespan: null
 # Please specify the path to the directory where the outputs should be saved.
 # If output directory/folder does not exist, it will be created.
