update config for ERA5 missing lcc, mcc, hcc

--- a/diagnostics/global_time_series/cli/single_analysis/config_time_series_atm.yaml
+++ b/diagnostics/global_time_series/cli/single_analysis/config_time_series_atm.yaml
@@ -47,3 +47,24 @@ timeseries_plot_params:
   #   resample: "M"
   #   savefig: True
   #   ylim: [-10, 10]
+  lcc: # no ERA5 yet
+    plot_kw:
+      color: "tab:blue"
+    plot_era5: False
+    resample: null
+    savefig: True
+    annual: True
+  mcc: # no ERA5 yet
+    plot_kw:
+      color: "tab:blue"
+    plot_era5: False
+    resample: null
+    savefig: True
+    annual: True
+  hcc: # no ERA5 yet
+    plot_kw:
+      color: "tab:blue"
+    plot_era5: False
+    resample: null
+    savefig: True
+    annual: True
